native/ailia.h


#define AILIA_STATUS_SUCCESS (0)
#define AILIA_STATUS_INVALID_ARGUMENT (-1)
#define AILIA_STATUS_ERROR_FILE_API (-2)
#define AILIA_STATUS_INVALID_VERSION (-3)
#define AILIA_STATUS_BROKEN (-4)
#define AILIA_STATUS_MEMORY_INSUFFICIENT (-5)
#define AILIA_STATUS_THREAD_ERROR (-6)
#define AILIA_STATUS_INVALID_STATE (-7)
#define AILIA_STATUS_UNSUPPORT_NET (-9)
#define AILIA_STATUS_INVALID_LAYER (-10)
#define AILIA_STATUS_INVALID_PARAMINFO (-11)
#define AILIA_STATUS_NOT_FOUND (-12)
#define AILIA_STATUS_GPU_UNSUPPORT_LAYER (-13)
#define AILIA_STATUS_GPU_ERROR (-14)
#define AILIA_STATUS_UNIMPLEMENTED (-15)
#define AILIA_STATUS_PERMISSION_DENIED (-16)
#define AILIA_STATUS_EXPIRED (-17)
#define AILIA_STATUS_UNSETTLED_SHAPE (-18)
#define AILIA_STATUS_DATA_HIDDEN (-19)
#define AILIA_STATUS_DATA_REMOVED AILIA_STATUS_DATA_HIDDEN
#define AILIA_STATUS_LICENSE_NOT_FOUND (-20)
#define AILIA_STATUS_LICENSE_BROKEN (-21)
#define AILIA_STATUS_LICENSE_EXPIRED (-22)
#define AILIA_STATUS_NDIMENSION_SHAPE (-23)
#define AILIA_STATUS_OTHER_ERROR (-128)
struct AILIANetwork;
#define AILIA_SHAPE_VERSION (1)
typedef struct _AILIAShape {
	unsigned int x;
	unsigned int y;
	unsigned int z;
	unsigned int w;
	unsigned int dim;
} AILIAShape;
#define AILIA_MULTITHREAD_AUTO (0)
#define AILIA_ENVIRONMENT_ID_AUTO (-1)
#define AILIA_DATATYPE_UNDEFINED 0
int AILIA_API ailiaCreate(struct AILIANetwork** net, int env_id, int num_thread);
int AILIA_API ailiaOpenStreamEx(struct AILIANetwork* net, const void* fopen_args, ailiaFileCallback callback, int version);
int AILIA_API ailiaOpenWeightEx(struct AILIANetwork* net, const void* fopen_args, ailiaFileCallback callback, int version);
int AILIA_API ailiaSummary(struct AILIANetwork* net, char* const buffer, const unsigned int buffer_size);
#define AILIA_ENVIRONMENT_TYPE_CPU (0)
typedef struct _AILIAEnvironment {
	int id;
	int type;
	const char* name;
	int backend;
	int props;
} AILIAEnvironment;
int AILIA_API ailiaDisableLayerFusion(struct AILIANetwork* net);
#define AILIA_PROFILE_DISABLE (0x00)
int AILIA_API ailiaSetProfileMode(struct AILIANetwork* net, unsigned int mode);
const char* AILIA_API ailiaGetStatusString(int status_code);
const char* AILIA_API ailiaGetErrorDetail(struct AILIANetwork* net);
const char* AILIA_API ailiaGetVersion(void);