lib/ffi/ailia.dart


  late final _ailiaDisableLayerFusionPtr = _lookup<
          ffi.NativeFunction<ffi.Int32 Function(ffi.Pointer<AILIANetwork>)>>(
      'ailiaDisableLayerFusion');
  late final _ailiaDisableLayerFusion = _ailiaDisableLayerFusionPtr
      .asFunction<int Function(ffi.Pointer<AILIANetwork>)>();

  /// \~japanese
  /// @brief プロファイルモードをセットします
  /// @param net          ネットワークオブジェクトポインタ
  /// @param mode         プロファイルモード
  /// @return
  /// 成功した場合は \ref AILIA_STATUS_SUCCESS 、そうでなければエラーコードを返す。
  /// @details
  /// プロファイルモードを指定します。デフォルトは無効です。
  /// ailiaOpenStreamXXXを呼び出したあとに呼び出してください。
  /// プロファイルモードを有効にした場合、 ailiaSummary() の出力にプロファイル結果が追加されます。
  ///
  /// \~english
  /// @brief Set the profile mode.
  /// @param net          The network instance pointer
  /// @param mode         Profile mode AILIA_PROFILE_XXX (Default : \ref AILIA_PROFILE_DISABLE )
  /// @return
  /// If this function is successful, it returns  \ref AILIA_STATUS_SUCCESS , or an error code otherwise.
  /// @details
  /// Set the profile mode. The default is profile disabled.
  /// Call it after calling ailiaOpenStreamXXX.
  /// When profile mode is enabled, you can get profile result via  ailiaSummary() .
  int ailiaSetProfileMode(
    ffi.Pointer<AILIANetwork> net,
    int mode,
  ) {
    return _ailiaSetProfileMode(
      net,
      mode,
    );
  }

  late final _ailiaSetProfileModePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(
              ffi.Pointer<AILIANetwork>, ffi.Uint32)>>('ailiaSetProfileMode');
  late final _ailiaSetProfileMode = _ailiaSetProfileModePtr
      .asFunction<int Function(ffi.Pointer<AILIANetwork>, int)>();

  /// \~japanese
  /// @brief ステータスコードに対応する文字列を返します。
  /// @param status_code   ステータスコード
  /// @return
  /// ステータスコードに対応する文字列。
  /// @details
  /// 返値は解放する必要はありません。
  /// 返された文字列は ailia のライブラリ(ailia.dll, libailia.so 等)をアンロードするまで有効です。
  /// AILIANetwork のインスタンスがある場合は ailiaGetErrorDetail() でエラーの詳細を取得できます。
  ///
  /// \~english
  /// @brief Returns the string describing given status code.
  /// @param status_code    Status code
  /// @return
  /// String describing given status code.
  /// Retuned string is valid until the library of ailia (ailia.dll, libailia.so, etc) is unloaded.
  /// @details
  /// The return value does not have to be released.
  /// If an instance of AILIANetwork is exist, ailiaGetErrorDetail() can be used to get the detail of the error.
  ffi.Pointer<ffi.Int8> ailiaGetStatusString(
    int status_code,
  ) {
    return _ailiaGetStatusString(
      status_code,
    );
  }

  late final _ailiaGetStatusStringPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Int8> Function(ffi.Int32)>>(
          'ailiaGetStatusString');
  late final _ailiaGetStatusString = _ailiaGetStatusStringPtr
      .asFunction<ffi.Pointer<ffi.Int8> Function(int)>();

  /// \~japanese
  /// @brief エラーの詳細を返します
  /// @param net   ネットワークオブジェクトポインタ
  /// @return
  /// エラー詳細
  /// @details
  /// 返値は解放する必要はありません。
  /// 文字列の有効期間は次にailiaのAPIを呼ぶまでです。
  /// モデルが暗号化されている場合は空文字を返します。
  ///
  /// \~english
  /// @brief Returns the details of errors.
  /// @param net   The network instance pointer
  /// @return
  /// Error details
  /// @details
  /// The return value does not have to be released.
  /// The string is valid until the next ailia API function is called.
  /// If model is encrypted, this function returns empty string.
  ffi.Pointer<ffi.Int8> ailiaGetErrorDetail(
    ffi.Pointer<AILIANetwork> net,
  ) {
    return _ailiaGetErrorDetail(
      net,
    );
  }

  late final _ailiaGetErrorDetailPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Int8> Function(
              ffi.Pointer<AILIANetwork>)>>('ailiaGetErrorDetail');
  late final _ailiaGetErrorDetail = _ailiaGetErrorDetailPtr
      .asFunction<ffi.Pointer<ffi.Int8> Function(ffi.Pointer<AILIANetwork>)>();

  /// \~japanese
  /// @brief ライブラリバージョンを取得します
  /// @return
  /// バージョン番号
  /// @details
  /// 返値は解放する必要はありません。
  ///
  /// \~english
  /// @brief Get the version of the library.
  /// @return
  /// Version number
  /// @details
  /// The return value does not have to be released.
  ffi.Pointer<ffi.Int8> ailiaGetVersion() {
    return _ailiaGetVersion();
  }

  late final _ailiaGetVersionPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Int8> Function()>>(
          'ailiaGetVersion');
  late final _ailiaGetVersion =
      _ailiaGetVersionPtr.asFunction<ffi.Pointer<ffi.Int8> Function()>();
}

final class _ailiaFileCallback extends ffi.Struct {
  external AILIA_USER_API_FOPEN fopen;

  external AILIA_USER_API_FSEEK fseek;

  external AILIA_USER_API_FTELL ftell;

  external AILIA_USER_API_FREAD fread;

  external AILIA_USER_API_FSIZE fsize;

  external AILIA_USER_API_FCLOSE fclose;
}

/// \~japanese
/// @brief ファイルを開きます
/// @param const void *   ailiaOpenStreamEx() もしくは ailiaOpenWeightEx() に与えたfopen_args
/// @return
/// 成功した場合、ユーザ定義ファイルポインタを返す。
/// 失敗した場合、NULLを返す。
///
/// \~english
/// @brief Opens a file.
/// @param const void *  fopen_args given to  ailiaOpenStreamEx()  or ailiaOpenWeightEx
/// @return
/// This function returns a user-defined file pointer if successful.
/// It returns NULL if it fails.
typedef AILIA_USER_API_FOPEN = ffi.Pointer<
    ffi.NativeFunction<ffi.Pointer<ffi.Void> Function(ffi.Pointer<ffi.Void>)>>;

/// \~japanese
/// @brief ファイルをシークします
/// @param void *                     ユーザ定義ファイルポインタ
/// @param  \ref AILIA_FSIZE_RETURN_TYPE     ファイル先頭からのオフセットバイト
/// @return
/// 成功した場合、 \ref AILIA_USER_API_SUCCESS を返す。
/// 失敗した場合、 \ref AILIA_USER_API_FAILED を返す。
///
/// \~english
/// @brief It seeks the file specified.
/// @param void *                     A user-defined file pointer
/// @param  \ref AILIA_FSIZE_RETURN_TYPE     Offset in bytes from the beginning of the file
/// @return
/// This function returns  \ref AILIA_USER_API_SUCCESS  if successful.
/// It returns  \ref AILIA_USER_API_FAILED  if it fails.
typedef AILIA_USER_API_FSEEK = ffi.Pointer<
    ffi.NativeFunction<ffi.Int32 Function(ffi.Pointer<ffi.Void>, ffi.Int64)>>;

/// \~japanese
/// @brief ファイルの現在位置を取得します
/// @param void * ユーザ定義ファイルポインタ
/// @return
/// 成功した場合、ファイルポインタの位置をバイト単位で返す。
/// 失敗した場合、-1を返す。
///
/// \~english
/// @brief Gets the current position in the file.
/// @param void * A user-defined file pointer
/// @return
/// This function returns the position, in bytes, the file pointer points to if successful.
/// It returns -1 if it fails.
typedef AILIA_USER_API_FTELL = ffi
    .Pointer<ffi.NativeFunction<ffi.Int64 Function(ffi.Pointer<ffi.Void>)>>;

/// \~japanese
/// @brief ファイルからデータを読み込みます
/// @param void *                     読み込みデータ格納先のポインタ
/// @param  \ref AILIA_FSIZE_RETURN_TYPE     読み込みデータのバイト長さ
/// @param void *                     ユーザ定義ファイルポインタ
/// @return
/// 成功した場合、 \ref AILIA_USER_API_SUCCESS を返す。
/// 失敗した場合、 \ref AILIA_USER_API_FAILED を返す。
/// 標準APIとは異なり、返値はAILIA_USER_API_*になりますのでご注意ください。
///
/// \~english
/// @brief Reads data from the file.
/// @param void *                     A pointer to the storage location of the data to be read
/// @param  \ref AILIA_FSIZE_RETURN_TYPE     The length in bytes of the data to be read
/// @param void *                     A user-defined file pointer
/// @return
/// This function returns  \ref AILIA_USER_API_SUCCESS  if successful.
/// It returns  \ref AILIA_USER_API_FAILED  if it fails.
/// Note that unlike the standard API, the return value will be AILIA_USER_API_*.
typedef AILIA_USER_API_FREAD = ffi.Pointer<
    ffi.NativeFunction<
        ffi.Int32 Function(
            ffi.Pointer<ffi.Void>, ffi.Int64, ffi.Pointer<ffi.Void>)>>;

/// \~japanese
/// @brief ファイルのサイズを取得します
/// @param void * ユーザ定義ファイルポインタ
/// @return
/// 成功した場合、ファイルのサイズをバイト単位で返す。
/// 失敗した場合、-1を返す。
///
/// \~english
/// @brief Gets the size of the file.
/// @param void * A user-defined file pointer
/// @return
/// This function returns the size of the file in bytes if successful.
/// It returns -1 if it fails.
typedef AILIA_USER_API_FSIZE = ffi
    .Pointer<ffi.NativeFunction<ffi.Int64 Function(ffi.Pointer<ffi.Void>)>>;

/// \~japanese
/// @brief ファイルを閉じます
/// @param void *  ユーザ定義ファイルポインタ
/// @return
/// 成功した場合、 \ref AILIA_USER_API_SUCCESS を返す。
/// 失敗した場合、 \ref AILIA_USER_API_FAILED を返す。
///
/// \~english
/// @brief Closes the file.
/// @param void *  A user-defined file pointer
/// @return
/// This function returns  \ref AILIA_USER_API_SUCCESS  if successful.
/// It returns  \ref AILIA_USER_API_FAILED  if it fails.
typedef AILIA_USER_API_FCLOSE = ffi
    .Pointer<ffi.NativeFunction<ffi.Int32 Function(ffi.Pointer<ffi.Void>)>>;

/// ネットワークオブジェクトのインスタンス
final class AILIANetwork extends ffi.Opaque {}

final class _AILIAShape extends ffi.Struct {
  /// \~japanese
  /// X軸のサイズ
  ///
  /// \~english
  /// Size along the X axis
  @ffi.Uint32()
  external int x;

  /// \~japanese
  /// Y軸のサイズ
  ///
  /// \~english
  /// Size along the Y axis
  @ffi.Uint32()
  external int y;

  /// \~japanese
  /// Z軸のサイズ
  ///
  /// \~english
  /// Size along the Z axis
  @ffi.Uint32()
  external int z;

  /// \~japanese
  /// W軸のサイズ
  ///
  /// \~english
  /// Size along the W axis
  @ffi.Uint32()
  external int w;

  /// \~japanese
  /// 次元情報
  ///
  /// \~english
  /// Dimension information
  @ffi.Uint32()
  external int dim;
}

typedef wchar_t = ffi.Int32;
typedef ailiaFileCallback = _ailiaFileCallback;
typedef AILIAShape = _AILIAShape;

final class _AILIAEnvironment extends ffi.Struct {
  /// \~japanese
  /// 環境を識別するID( ailiaCreate() の引数に与える)
  ///
  /// \~english
  /// The ID to identify the inference backend (passed to  ailiaCreate()  as an argument)
  @ffi.Int32()
  external int id;

  /// \~japanese
  /// 環境の種別( \ref AILIA_ENVIRONMENT_TYPE_CPU  or BLAS or GPU)
  ///
  /// \~english
  /// The type of the inference backend ( \ref AILIA_ENVIRONMENT_TYPE_CPU , BLAS, or GPU)
  @ffi.Int32()
  external int type;

  /// \~japanese
  /// デバイス名(シングルトンで保持されており開放不要)(ASCII)
  ///
  /// \~english
  /// The device name. It is valid until the AILIANetwork instance is destroyed.
  external ffi.Pointer<ffi.Int8> name;

  /// \~japanese
  /// 環境のバックエンド (AILIA_ENVIRONMENT_BACKEND_*)
  ///
  /// \~english
  /// Computational (hardware) backend enabled by this environment (AILIA_ENVIRONMENT_BACKEND_*)
  @ffi.Int32()
  external int backend;

  /// \~japanese
  /// 環境の特性などを示す(AILIA_ENVIRONMENT_PROPERTY_* の論理和)
  ///
  /// \~english
  /// Additional property (low-power etc) of the environment (Logical-OR of AILIA_ENVIRONMENT_PROPERTY_*)
  @ffi.Int32()
  external int props;
}

typedef AILIAEnvironment = _AILIAEnvironment;

const int NULL = 0;

const int AILIA_USER_API_SUCCESS = 0;

const int AILIA_USER_API_FAILED = -1;

const int AILIA_FILE_CALLBACK_VERSION = 1;

const int AILIA_STATUS_SUCCESS = 0;

const int AILIA_STATUS_INVALID_ARGUMENT = -1;

const int AILIA_STATUS_ERROR_FILE_API = -2;

const int AILIA_STATUS_INVALID_VERSION = -3;

const int AILIA_STATUS_BROKEN = -4;

const int AILIA_STATUS_MEMORY_INSUFFICIENT = -5;

const int AILIA_STATUS_THREAD_ERROR = -6;

const int AILIA_STATUS_INVALID_STATE = -7;

const int AILIA_STATUS_UNSUPPORT_NET = -9;

const int AILIA_STATUS_INVALID_LAYER = -10;

const int AILIA_STATUS_INVALID_PARAMINFO = -11;

const int AILIA_STATUS_NOT_FOUND = -12;

const int AILIA_STATUS_GPU_UNSUPPORT_LAYER = -13;

const int AILIA_STATUS_GPU_ERROR = -14;

const int AILIA_STATUS_UNIMPLEMENTED = -15;

const int AILIA_STATUS_PERMISSION_DENIED = -16;

const int AILIA_STATUS_EXPIRED = -17;

const int AILIA_STATUS_UNSETTLED_SHAPE = -18;

const int AILIA_STATUS_DATA_HIDDEN = -19;

const int AILIA_STATUS_DATA_REMOVED = -19;

const int AILIA_STATUS_LICENSE_NOT_FOUND = -20;

const int AILIA_STATUS_LICENSE_BROKEN = -21;

const int AILIA_STATUS_LICENSE_EXPIRED = -22;

const int AILIA_STATUS_NDIMENSION_SHAPE = -23;

const int AILIA_STATUS_OTHER_ERROR = -128;

const int AILIA_SHAPE_VERSION = 1;

const int AILIA_MULTITHREAD_AUTO = 0;

const int AILIA_ENVIRONMENT_ID_AUTO = -1;

const int AILIA_DATATYPE_UNDEFINED = 0;
